- updated, added pl translations, converted to UTF
Changed files:
    xmame-SDL.desktop -> 1.3
    xmame-x11.desktop -> 1.2

--- a/xmame-SDL.desktop
+++ b/xmame-SDL.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=xmame (SDL)
 Comment=xmame with SDL graphic output
-Comment[pl]=Emulator xmame z wyj¶ciem graficznym xSDL
+Comment[pl]=Emulator xmame z wyjściem graficznym xSDL
 Exec=xmame.SDL
 Icon=xmame.png
 Terminal=0
