--- a/xmame-SDL.desktop
+++ b/xmame-SDL.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=xmame (SDL)
-Comment=xmame with SDL graphic output
+Name=XMame (SDL)
+Comment=XMame with SDL graphic output
 Comment[pl]=Emulator xmame z wyjściem graficznym xSDL
 Exec=xmame.SDL
 Icon=xmame.png
