- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    xmame-SDL.desktop -> 1.6
    xmame-qtmame.desktop -> 1.3
    xmame-x11.desktop -> 1.5

--- a/xmame-SDL.desktop
+++ b/xmame-SDL.desktop
@@ -4,7 +4,7 @@ Comment=XMame with SDL graphic output
 Comment[pl]=Emulator xmame z wyjściem graficznym xSDL
 Exec=xmame.SDL
 Icon=xmame.png
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
