--- a/xmame-x11.desktop
+++ b/xmame-x11.desktop
@@ -4,7 +4,7 @@ Comment=XMame with x11 graphic output
 Comment[pl]=Emulator xmame z wyjściem graficznym x11
 Exec=xmame.x11
 Icon=xmame.png
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
