--- a/xmame-qtmame.desktop
+++ b/xmame-qtmame.desktop
@@ -1,11 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Xmame Front End
+Comment[pl]=Nakładka na Xmame
 Exec=qtmame
-Icon=/usr/share/pixmaps/qtmame.png
+Icon=qtmame.png
 Name=Qtmame
 Path=
 Terminal=false
 Type=Application
-Categories=Utility;Emulator;
+Categories=Qt;Utility;Emulator;
 # vi: encoding=utf-8
