- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    xmame-SDL.desktop -> 1.8
    xmame-qtmame.desktop -> 1.8
    xmame-x11.desktop -> 1.7

--- a/xmame-qtmame.desktop
+++ b/xmame-qtmame.desktop
@@ -1,9 +1,8 @@
 [Desktop Entry]
-Encoding=UTF-8
 Comment=Xmame Front End
 Comment[pl]=Nakładka na Xmame
 Exec=qtmame
-Icon=qtmame.png
+Icon=qtmame
 Name=Qtmame
 Path=
 Terminal=false
