--- a/xmame-SDL.desktop
+++ b/xmame-SDL.desktop
@@ -3,9 +3,8 @@ Name=XMame (SDL)
 Comment=XMame with SDL graphic output
 Comment[pl]=Emulator xmame z wyjściem graficznym xSDL
 Exec=xmame.SDL
-Icon=xmame.png
+Icon=xmame
 Terminal=false
 Type=Application
-Encoding=UTF-8
 Categories=Utility;Emulator;
 # vi: encoding=utf-8
